practica-jsbach/jsbachParser.py
# Generated from jsbach.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class jsbachParser ( Parser ):

    grammarFileName = "jsbach.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|:'", "':|'", "'['", "']'", "'('", "')'", 
                     "'#'", "'{'", "'}'", "'*'", "'/'", "'%'", "'+'", "'-'", 
                     "'<'", "'<='", "'>'", "'>='", "'='", "'/='", "'<-'", 
                     "'if'", "'else'", "'while'", "'<?>'", "'<!>'", "'<:>'", 
                     "'<t>'", "'<<'", "'8<'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "MUL", "DIV", "MOD", "SUM", 
                      "SUB", "LT", "LE", "GT", "GE", "EQ", "NEQ", "ASSIGN", 
                      "IF", "ELSE", "WHILE", "READ", "WRITE", "PLAY", "TEMPO", 
                      "APPEND", "REMOVE", "NOTE", "VAR", "FUNC", "NUM", 
                      "STRING", "ESC_SEQ", "COMMENT", "WS" ]

    RULE_root = 0
    RULE_function = 1
    RULE_statements = 2
    RULE_statement = 3
    RULE_expr = 4
    RULE_exprList = 5
    RULE_string = 6
    RULE_ident = 7

    ruleNames =  [ "root", "function", "statements", "statement", "expr", 
                   "exprList", "string", "ident" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    MUL=10
    DIV=11
    MOD=12
    SUM=13
    SUB=14
    LT=15
    LE=16
    GT=17
    GE=18
    EQ=19
    NEQ=20
    ASSIGN=21
    IF=22
    ELSE=23
    WHILE=24
    READ=25
    WRITE=26
    PLAY=27
    TEMPO=28
    APPEND=29
    REMOVE=30
    NOTE=31
    VAR=32
    FUNC=33
    NUM=34
    STRING=35
    ESC_SEQ=36
    COMMENT=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(jsbachParser.EOF, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.FunctionContext)
            else:
                return self.getTypedRuleContext(jsbachParser.FunctionContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = jsbachParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsbachParser.FUNC:
                self.state = 16
                self.function()
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 22
            self.match(jsbachParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(jsbachParser.FUNC, 0)

        def statements(self):
            return self.getTypedRuleContext(jsbachParser.StatementsContext,0)


        def ident(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.IdentContext)
            else:
                return self.getTypedRuleContext(jsbachParser.IdentContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = jsbachParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(jsbachParser.FUNC)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsbachParser.VAR:
                self.state = 25
                self.ident()
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 31
            self.match(jsbachParser.T__0)
            self.state = 32
            self.statements()
            self.state = 33
            self.match(jsbachParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.StatementContext)
            else:
                return self.getTypedRuleContext(jsbachParser.StatementContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_statements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = jsbachParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.IF) | (1 << jsbachParser.WHILE) | (1 << jsbachParser.READ) | (1 << jsbachParser.WRITE) | (1 << jsbachParser.PLAY) | (1 << jsbachParser.TEMPO) | (1 << jsbachParser.REMOVE) | (1 << jsbachParser.VAR) | (1 << jsbachParser.FUNC))) != 0):
                self.state = 35
                self.statement()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return jsbachParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PlayContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PLAY(self):
            return self.getToken(jsbachParser.PLAY, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)

        def exprList(self):
            return self.getTypedRuleContext(jsbachParser.ExprListContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlay" ):
                return visitor.visitPlay(self)
            else:
                return visitor.visitChildren(self)


    class ReadContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ(self):
            return self.getToken(jsbachParser.READ, 0)
        def ident(self):
            return self.getTypedRuleContext(jsbachParser.IdentContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)


    class ProcedureCallContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNC(self):
            return self.getToken(jsbachParser.FUNC, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureCall" ):
                return visitor.visitProcedureCall(self)
            else:
                return visitor.visitChildren(self)


    class ListRemoveContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REMOVE(self):
            return self.getToken(jsbachParser.REMOVE, 0)
        def ident(self):
            return self.getTypedRuleContext(jsbachParser.IdentContext,0)

        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListRemove" ):
                return visitor.visitListRemove(self)
            else:
                return visitor.visitChildren(self)


    class ListAppendContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(jsbachParser.IdentContext,0)

        def APPEND(self):
            return self.getToken(jsbachParser.APPEND, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListAppend" ):
                return visitor.visitListAppend(self)
            else:
                return visitor.visitChildren(self)


    class TempoContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TEMPO(self):
            return self.getToken(jsbachParser.TEMPO, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTempo" ):
                return visitor.visitTempo(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(jsbachParser.WHILE, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)

        def statements(self):
            return self.getTypedRuleContext(jsbachParser.StatementsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(jsbachParser.IF, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.StatementsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.StatementsContext,i)

        def ELSE(self):
            return self.getToken(jsbachParser.ELSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class WriteContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE(self):
            return self.getToken(jsbachParser.WRITE, 0)
        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.StringContext)
            else:
                return self.getTypedRuleContext(jsbachParser.StringContext,i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(jsbachParser.IdentContext,0)

        def ASSIGN(self):
            return self.getToken(jsbachParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)

        def exprList(self):
            return self.getTypedRuleContext(jsbachParser.ExprListContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = jsbachParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = jsbachParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.ident()
                self.state = 42
                self.match(jsbachParser.ASSIGN)
                self.state = 45
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [jsbachParser.T__4, jsbachParser.T__6, jsbachParser.SUM, jsbachParser.SUB, jsbachParser.NOTE, jsbachParser.VAR, jsbachParser.NUM]:
                    self.state = 43
                    self.expr(0)
                    pass
                elif token in [jsbachParser.T__7]:
                    self.state = 44
                    self.exprList()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                localctx = jsbachParser.ProcedureCallContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(jsbachParser.FUNC)
                self.state = 51
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 48
                        self.expr(0) 
                    self.state = 53
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass

            elif la_ == 3:
                localctx = jsbachParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.match(jsbachParser.IF)
                self.state = 55
                self.expr(0)
                self.state = 56
                self.match(jsbachParser.T__0)
                self.state = 57
                self.statements()
                self.state = 58
                self.match(jsbachParser.T__1)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==jsbachParser.ELSE:
                    self.state = 59
                    self.match(jsbachParser.ELSE)
                    self.state = 60
                    self.match(jsbachParser.T__0)
                    self.state = 61
                    self.statements()
                    self.state = 62
                    self.match(jsbachParser.T__1)


                pass

            elif la_ == 4:
                localctx = jsbachParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 66
                self.match(jsbachParser.WHILE)
                self.state = 67
                self.expr(0)
                self.state = 68
                self.match(jsbachParser.T__0)
                self.state = 69
                self.statements()
                self.state = 70
                self.match(jsbachParser.T__1)
                pass

            elif la_ == 5:
                localctx = jsbachParser.ReadContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.match(jsbachParser.READ)
                self.state = 73
                self.ident()
                pass

            elif la_ == 6:
                localctx = jsbachParser.WriteContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 74
                self.match(jsbachParser.WRITE)
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 77
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [jsbachParser.STRING]:
                            self.state = 75
                            self.string()
                            pass
                        elif token in [jsbachParser.T__4, jsbachParser.T__6, jsbachParser.SUM, jsbachParser.SUB, jsbachParser.NOTE, jsbachParser.VAR, jsbachParser.NUM]:
                            self.state = 76
                            self.expr(0)
                            pass
                        else:
                            raise NoViableAltException(self)
                 
                    self.state = 81
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass

            elif la_ == 7:
                localctx = jsbachParser.PlayContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 82
                self.match(jsbachParser.PLAY)
                self.state = 85
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [jsbachParser.T__4, jsbachParser.T__6, jsbachParser.SUM, jsbachParser.SUB, jsbachParser.NOTE, jsbachParser.VAR, jsbachParser.NUM]:
                    self.state = 83
                    self.expr(0)
                    pass
                elif token in [jsbachParser.T__7]:
                    self.state = 84
                    self.exprList()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 8:
                localctx = jsbachParser.TempoContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 87
                self.match(jsbachParser.TEMPO)
                self.state = 88
                self.expr(0)
                pass

            elif la_ == 9:
                localctx = jsbachParser.ListAppendContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 89
                self.ident()
                self.state = 90
                self.match(jsbachParser.APPEND)
                self.state = 91
                self.expr(0)
                pass

            elif la_ == 10:
                localctx = jsbachParser.ListRemoveContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 93
                self.match(jsbachParser.REMOVE)
                self.state = 94
                self.ident()
                self.state = 95
                self.match(jsbachParser.T__2)
                self.state = 96
                self.expr(0)
                self.state = 97
                self.match(jsbachParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return jsbachParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ArrayElementContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(jsbachParser.IdentContext,0)

        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayElement" ):
                return visitor.visitArrayElement(self)
            else:
                return visitor.visitChildren(self)


    class NoteContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOTE(self):
            return self.getToken(jsbachParser.NOTE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNote" ):
                return visitor.visitNote(self)
            else:
                return visitor.visitChildren(self)


    class ArrayLengthContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(jsbachParser.IdentContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayLength" ):
                return visitor.visitArrayLength(self)
            else:
                return visitor.visitChildren(self)


    class VariableContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(jsbachParser.IdentContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)


    class ArithmeticContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)

        def MUL(self):
            return self.getToken(jsbachParser.MUL, 0)
        def DIV(self):
            return self.getToken(jsbachParser.DIV, 0)
        def MOD(self):
            return self.getToken(jsbachParser.MOD, 0)
        def SUM(self):
            return self.getToken(jsbachParser.SUM, 0)
        def SUB(self):
            return self.getToken(jsbachParser.SUB, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmetic" ):
                return visitor.visitArithmetic(self)
            else:
                return visitor.visitChildren(self)


    class RelationalContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)

        def LT(self):
            return self.getToken(jsbachParser.LT, 0)
        def LE(self):
            return self.getToken(jsbachParser.LE, 0)
        def GT(self):
            return self.getToken(jsbachParser.GT, 0)
        def GE(self):
            return self.getToken(jsbachParser.GE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelational" ):
                return visitor.visitRelational(self)
            else:
                return visitor.visitChildren(self)


    class UnaryContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)

        def SUM(self):
            return self.getToken(jsbachParser.SUM, 0)
        def SUB(self):
            return self.getToken(jsbachParser.SUB, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnary" ):
                return visitor.visitUnary(self)
            else:
                return visitor.visitChildren(self)


    class ParenthesisContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesis" ):
                return visitor.visitParenthesis(self)
            else:
                return visitor.visitChildren(self)


    class ValueContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(jsbachParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)


    class EqualityContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)

        def EQ(self):
            return self.getToken(jsbachParser.EQ, 0)
        def NEQ(self):
            return self.getToken(jsbachParser.NEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEquality" ):
                return visitor.visitEquality(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = jsbachParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = jsbachParser.ParenthesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 102
                self.match(jsbachParser.T__4)
                self.state = 103
                self.expr(0)
                self.state = 104
                self.match(jsbachParser.T__5)
                pass

            elif la_ == 2:
                localctx = jsbachParser.UnaryContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 106
                _la = self._input.LA(1)
                if not(_la==jsbachParser.SUM or _la==jsbachParser.SUB):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 107
                self.expr(10)
                pass

            elif la_ == 3:
                localctx = jsbachParser.ArrayLengthContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 108
                self.match(jsbachParser.T__6)
                self.state = 109
                self.ident()
                pass

            elif la_ == 4:
                localctx = jsbachParser.ArrayElementContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 110
                self.ident()
                self.state = 111
                self.match(jsbachParser.T__2)
                self.state = 112
                self.expr(0)
                self.state = 113
                self.match(jsbachParser.T__3)
                pass

            elif la_ == 5:
                localctx = jsbachParser.VariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 115
                self.ident()
                pass

            elif la_ == 6:
                localctx = jsbachParser.NoteContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 116
                self.match(jsbachParser.NOTE)
                pass

            elif la_ == 7:
                localctx = jsbachParser.ValueContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 117
                self.match(jsbachParser.NUM)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 134
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 132
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        localctx = jsbachParser.ArithmeticContext(self, jsbachParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 120
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 121
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.MUL) | (1 << jsbachParser.DIV) | (1 << jsbachParser.MOD))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 122
                        self.expr(10)
                        pass

                    elif la_ == 2:
                        localctx = jsbachParser.ArithmeticContext(self, jsbachParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 123
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 124
                        _la = self._input.LA(1)
                        if not(_la==jsbachParser.SUM or _la==jsbachParser.SUB):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 125
                        self.expr(9)
                        pass
